fixing white space

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -215,9 +215,10 @@
 
 .post-content {
     margin-bottom: $spacing-unit;
-
+	font-size : 18px;
+	
     h2 {
-        font-size: 32px;
+        font-size: 36px;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -225,7 +226,7 @@
     }
 
     h3 {
-        font-size: 26px;
+        font-size: 28px;
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -233,7 +234,7 @@
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 24px;
 
         @include media-query($on-laptop) {
             font-size: 18px;
